# CRM

./: README.md
crm_app/: .gitignore  pyproject.toml
crm_app/crm/crm/: settings.py  urls.py
crm_app/crm/crm/templates/: base.html  index.html  item_detail.html  items.html  login_page.html  promo_detail.html
crm_app/crm/working_crm/: forms.py  urls.py
crm_app/crm/working_crm/static/css/: main.css
