[tool.poetry]
name = "crm-app"
version = "0.1.0"
description = ""
authors = ["mac <v.kotelnikovdidi@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
